Alex fammi un favore e prova a vedere se funziona, per ora è stato aggiunto:
-Lista dei blocchi presi (è da migliorare aggiungendo la possibilità di cliccare un immagine per eliminare il blocco dalla lista)
-End Game per ora ha solo il tempo totale impiegato

Se quello che ho fatto funziona allora passo a migliorare e implementare altr cose che utilizzano queste ultime.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="motor_a">Base</string>
     <string name="motor_c">Braccio</string>
     <string name="motor_d">Mano</string>
+    <string name="end_game">Statistiche</string>
 </resources>
