--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="app_name">LegoMindfuck</string>
+    <string name="app_name">LegoMindfuQ</string>
     <string name="motor_info">Controllo Motori</string>
     <string name="motor_a">Base</string>
     <string name="motor_c">Braccio</string>
